--- a/src/main/resources/templates/articles/view.html
+++ b/src/main/resources/templates/articles/view.html
@@ -11,22 +11,37 @@
         <!--/*@thymesVar id="article" type="com.kamegatze.learnjvm.model.articles.Article"*/-->
         <div class="page-content">
             <article class="row">
-                <div class="col s4"></div>
-                <div class="col s4 card">
-                    <h5 class="center-align" th:utext="${article.label}"></h5>
-                    <br>
-                    <div class="card-content">
-                        [(${article.content})]
+                <div class="col s4" style="width: 25%;"></div>
+                <div class="col s4" style="width: 50%;">
+                    <div class="card">
+                        <h5 class="center-align" th:utext="${article.label}"></h5>
+                        <br>
+                        <div class="card-content">
+                            [(${article.content})]
+                        </div>
+                        <div class="card-action d-flex">
+                            <div class="flex-grow-1"></div>
+                            <div>
+                                <span th:text="#{date.published}"></span>
+                                <span th:text="${': ' + @dateTimeFormatterUtilsImpl.dateTimeOfPattern('dd.MM.yyyy', article.createdAt)}"></span>
+                            </div>
+                        </div>
                     </div>
-                    <div class="card-action d-flex">
-                        <div class="flex-grow-1"></div>
-                        <div>
-                            <span th:text="#{date.published}"></span>
-                            <span th:text="${': ' + @dateTimeFormatterUtilsImpl.dateTimeOfPattern('dd.MM.yyyy', article.createdAt)}"></span>
+                    <div class="card">
+                        <div class="card-content">
+                            <form class="d-flex">
+                                <div class="input-field flex-grow-1">
+                                    <textarea id="comment" class="materialize-textarea"></textarea>
+                                    <label th:text="#{label.comment}" for="comment"></label>
+                                </div>
+                                <div class="input-field ms-3">
+                                    <button type="submit" class="btn waves-effect waves-light"><i class="material-icons">send</i></button>
+                                </div>
+                            </form>
                         </div>
                     </div>
                 </div>
-                <div class="col s4"></div>
+                <div class="col s4" style="width: 25%;"></div>
             </article>
         </div>
         <th:block th:replace="~{fragments/footer :: footer}"></th:block>
