--- a/src/main/resources/templates/articles/create.html
+++ b/src/main/resources/templates/articles/create.html
@@ -15,14 +15,14 @@
             <form class="col s6" action="#" th:action="@{/articles/create}" th:object="${article}" method="post">
                 <div class="input-field">
                     <input class="validate" id="heading" type="text" th:field="*{label}" th:value="${article.label}">
-                    <label for="heading">Название статьи</label>
+                    <label for="heading" th:text="#{article.load.name}"></label>
                 </div>
                 <div class="input-field">
                     <textarea id="content" class="materialize-textarea" th:field="*{content}"
                               style="height: 20em" th:value="${article.content}"></textarea>
-                    <label for="content">Контент</label>
+                    <label for="content" th:text="#{article.load.content}"></label>
                 </div>
-                <button type="submit" class="btn waves-effect waves-light">Сохранить</button>
+                <button type="submit" class="btn waves-effect waves-light" th:text="#{text.save}"></button>
             </form>
             <div class="col s3"></div>
         </div>
