--- a/src/main/resources/templates/authentication/login.html
+++ b/src/main/resources/templates/authentication/login.html
@@ -14,24 +14,24 @@
                 <div class="row col s12">
                     <div class="input-field col s12">
                         <input class="validate" id="login" type="text" th:field="*{username}" th:value="${login.username}">
-                        <label for="login">Имя пользователя</label>
+                        <label th:text="#{field.user.name}" for="login"></label>
                     </div>
                     <div class="input-field col s12">
                         <input class="validate" id="password" type="password" th:field="*{password}" th:value="${login.password}">
-                        <label for="password">Пароль</label>
+                        <label th:text="#{field.user.password}" for="password"></label>
                     </div>
                     <div class="input-field col s12">
                         <button class="btn waves-effect waves-light" type="submit">
                             <i class="material-icons left">input</i>
-                            Войти
+                            <th:block th:text="#{login.value}"></th:block>
                         </button>
                         <a class="btn waves-effect waves-light" th:href="@{/authentication/register}">
                             <i class="material-icons left">add_circle</i>
-                            Зарегистрироваться
+                            <th:block th:text="#{registration.value}"></th:block>
                         </a>
                     </div>
                     <div th:if="${param.error}" class="col s12">
-                        <span class="red-text helper-text">Проверьте введеные имя пользователя и пароль</span>
+                        <span class="red-text helper-text" th:text="#{check.value.by.login}"></span>
                     </div>
                 </div>
             </form>
